--- a/contact-us.html
+++ b/contact-us.html
@@ -452,8 +452,7 @@
     </div>
     <div class="info-content text-center">
     <span class="title font-weight-bold">Mail (General)</span>
-    <div class="text"><a href="mailto:info@indygreentech.com" class="text-dark"> francesca@indygreentech.com</a> <br> 
-    <a href="mailto:sales@indygreentech.com" title="sales@indygreentech.com" class="text-dark">sales@indygreentech.com</a> </div>
+    <div class="text"><a href="mailto:info@indygreentech.com" class="text-dark"> francesca@indygreentech.com</a></div>
    
     </div>
     </div>
