--- a/index.html
+++ b/index.html
@@ -1648,7 +1648,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <div class="icon"><img src="img/mail.png" loading="lazy" loading="lazy" alt="Mail" title="Mail"></div>
 <h4>Email </h4>
 <span class="font-weight-bold">General</span>
-<div class="text"><a href="mailto:info@indygreentech.com" title="info@indygreentech.com"> info@indygreentech.com</a>, <a href="mailto:sales@indygreentech.com" title="sales@indygreentech.com">sales@indygreentech.com</a></div>
+<div class="text"><a href="mailto:info@indygreentech.com" title="info@indygreentech.com"> info@indygreentech.com</a></div>
 
 <span class="mt-3 d-block font-weight-bold">Global</span>
 <div class="text"><a href="mailto: francesca@indygreentech.com" title="francesca@indygreentech.com">  francesca@indygreentech.com</a></div>
